include langchain extraction and data visualization with saved plots

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,11 @@ scikit-learn
 pandas
 numpy
 matplotlib
+seaborn  # For improved visualization
 langchain
+langchain-community
+langchain-openai
 openai
 tensorflow  # (if using image-based features)
 torch       # (if using deep learning models)
+
